# zoe

./: .gitignore  .gitlab-ci.yml  .markdownlint.jsonc  BIBLIOGRAPHY.bib  CHANGELOG.md  CITATION.bib  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  ref.fasta  rustfmt.toml
.cargo/: config.toml
.github/scripts/: check_versions_changelog.pl  last_release_notes.pl
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.gitlab/merge_request_templates/: release.md
assets/: docs-header.html
examples/: demo_canonical_fastq.rs  demo_cigar.rs  demo_file_or_stdin.rs  demo_filter_kmer_set.rs  demo_gc_coding_noncoding.rs  demo_kmer_counts.rs  demo_random.rs  demo_revcomp.rs  demo_search_then_translate.rs  demo_sneaky_snake.rs  demo_translate.rs  demo_trimming.rs  example.fasta  example.fastq  example_gc_coding_noncoding.fastq  example_search_then_translate.fastq  example_trimming.fastq
src/: lib.rs
src/alignment/: errors.rs  mod.rs  pairwise.rs  profile.rs  profile_set.rs  sneaky_snake.rs  state.rs  std_traits.rs  sw.rs  util.rs
src/alignment/nw/: mod.rs
src/alignment/phmm/: alignment_modes.rs  editing.rs  errors.rs  indexing.rs  mod.rs  models.rs  modules.rs  sam_parser.rs  score_from_path.rs  state.rs  traits.rs  views.rs  visit_params.rs  viterbi.rs
src/alignment/phmm/indexing/: accessors.rs  indices.rs  mod.rs
src/alignment/phmm/models/: components.rs  mod.rs
src/alignment/phmm/viterbi/: domain.rs  global.rs  local.rs  mod.rs  semilocal.rs
src/alignment/sw/: banded.rs  bench.rs  mod.rs  scalar.rs  striped.rs  test.rs  three_pass.rs
src/alignment/types/: backtrack.rs  mod.rs  output.rs  state.rs  std_traits.rs  test.rs
src/composition/: by_position.rs  content.rs  counts.rs  frequency_table.rs  mod.rs
src/composition/by_position/: mod.rs  test.rs
src/data/: array_types.rs  byte_types.rs  err.rs  fasta.rs  fastq.rs  id_types.rs  mod.rs  sam.rs  vec_types.rs  view_traits.rs  whichever.rs
src/data/arbitrary/: byte.rs  cigar.rs  kmer.rs  math.rs  mod.rs  nucleotides.rs  phmm.rs  sam.rs  string.rs  vec.rs
src/data/arbitrary/alignment/: mod.rs  output.rs  phmm.rs
src/data/arbitrary/alignment/phmm/: components.rs  mod.rs
src/data/arbitrary/collections/: array.rs  mod.rs  vec.rs
src/data/arbitrary/records/: fasta.rs  fastq.rs  generic_fasta.rs  mod.rs  sam.rs
src/data/arbitrary/types/: amino_acids.rs  cigar.rs  mod.rs  nucleotides.rs  phred.rs
src/data/constants/: alphas.rs  mappings.rs  matrices.rs  mod.rs
src/data/constants/mappings/: .rustfmt.toml  aa.rs  byte_index.rs  disambiguation.rs  dna.rs  gc.rs  mod.rs  test.rs  validator.rs
src/data/convert/: mod.rs
src/data/extension/: array_types.rs  byte_types.rs  id_types.rs  mod.rs  simd.rs  vec_types.rs
src/data/fasta/: mod.rs
src/data/fastq/: mod.rs  reader.rs  test.rs  view_traits.rs
src/data/matrices/: aa.rs  mod.rs  parse.rs
src/data/records/: mod.rs  sam.rs
src/data/records/fasta/: mod.rs  test.rs
src/data/records/fasta/generic/: mod.rs  reader.rs  std_traits.rs  taxon.rs  view_traits.rs
src/data/records/fastq/: mod.rs  reader.rs  std_traits.rs  test.rs  view_traits.rs
src/data/records/sam/: merge_pairs.rs  mod.rs  reader.rs  sort_traits.rs  std_traits.rs  test.rs  view_traits.rs
src/data/types/: amino_acids.rs  cigar.rs  mod.rs  nucleotides.rs  phred.rs  primitive_traits.rs
src/data/types/amino_acids/: getter_traits.rs  mod.rs  std_traits.rs  view_traits.rs
src/data/types/cigar/: benches.rs  error.rs  iter.rs  mod.rs  test.rs  views.rs
src/data/types/nucleotides/: bench.rs  getter_traits.rs  mod.rs  rev_comp.rs  sanitize.rs  std_traits.rs  test.rs  translation.rs  view_traits.rs
src/data/types/phred/: mod.rs  stats.rs  std_traits.rs  view_traits.rs
src/data/validation/: check.rs  mod.rs  recode.rs  retain.rs
src/data/views/: indexing.rs  macros.rs  mod.rs  traits.rs
src/distance/: aa.rs  general.rs  mod.rs  tabulation.rs
src/distance/dna/: bench.rs  mod.rs  tabulation.rs  test.rs
src/generate/: mod.rs
src/iter_utils/: mod.rs  sampling.rs  stepped_windows.rs
src/kmer/: encoder.rs  errors.rs  kmer_counter.rs  kmer_set.rs  len_mappings.rs  mod.rs  three_bit.rs  traits.rs  type_mappings.rs  variants.rs
src/kmer/collections/: counter.rs  mod.rs  set.rs
src/kmer/encoders/: mod.rs  three_bit.rs  two_bit.rs
src/kmer/three_bit/: encoder.rs  int_mappings.rs  kmer_counter.rs  kmer_set.rs  kmer_set_one_mismatch.rs  len_mappings.rs  mod.rs
src/math/: cast.rs  float.rs  float_compare.rs  integer.rs  mod.rs
src/search/: bench.rs  bytes.rs  inexact.rs  k_repeating.rs  mod.rs  range_search.rs  replace.rs  subsequence.rs  substring.rs  test.rs
src/search/bytes/: mod.rs  replace.rs  search.rs
src/simd/: mod.rs
src/sort/: mod.rs
tests/: fasta.rs
tests/data/: CY137594.txt  KC684446.1.txt  KJ907623.1.txt  KJ907631.1.txt  KP326324.1.txt  NC_026433.1.txt
