[package]
edition = "2024"
name = "zoe"
version = "0.0.16"
rust-version = "1.87"
description = "A nightly library for viral genomics"
license = "Apache-2.0"

# Long-term maintainers of the Zoe library
authors = ["Samuel S. Shepard <sshepard@cdc.gov>"]
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
    "algorithms",
]
keywords = ["alignment", "simd", "kmer", "search", "distance"]
repository = "https://github.com/CDCgov/zoe"
readme = "README.md"
include = [
    "src/**/*",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "assets/docs-header.html",
    ".cargo/config.toml",
]

[lib]
name = "zoe"

[features]
default = ["rand"]

# An optional feature for generating random nucleotide and amino acid sequences
rand = ["dep:rand_xoshiro"]

# An optional feature that provides SIMD multiversioning of selected Zoe
# functions
multiversion = ["dep:multiversion"]

# An optional feature adding the implementation of Arbitrary to many Zoe types,
# for fuzz-testing
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "*", optional = true, features = ["derive"] }
multiversion = { version = "*", optional = true }
rand_xoshiro = { version = "*", optional = true }
itoa = "*"

[profile.release]
strip = true
lto = "thin"

[package.metadata.docs.rs]
features = ["rand", "arbitrary"]
rustdoc-args = ["--html-in-header", "./assets/docs-header.html"]
