[package]
edition = "2024"
name = "zoe"
version = "0.0.22-dev"
rust-version = "1.88"
description = "A nightly library for viral genomics"
license = "Apache-2.0"

# Long-term maintainers of the Zoe library
authors = ["Samuel S. Shepard <sshepard@cdc.gov>"]
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
    "algorithms",
]
keywords = ["alignment", "simd", "kmer", "search", "distance"]
repository = "https://github.com/CDCgov/zoe"
homepage = "https://github.com/CDCgov/zoe"
readme = "README.md"
include = [
    "src/**/*",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "assets/docs-header.html",
    ".cargo/config.toml",
]

[lib]
name = "zoe"

[features]
default = ["rand"]

# An optional feature for generating random nucleotide and amino acid sequences
rand = ["dep:rand_xoshiro"]

# An optional feature that provides SIMD multiversioning of selected Zoe
# functions
multiversion = ["dep:multiversion"]

# An optional feature adding additional functionality for fuzzing, including
# Arbitrary implementations
fuzzing = ["dep:arbitrary"]

# Note: development features may be removed at any time.

# An optional feature enabling pHMM functionality which is currently in
# development
dev-phmm = []

# An optional feature enabling 3-pass alignment which is currently in
# development
dev-3pass = []

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
multiversion = { version = "0.8", optional = true }
rand_xoshiro = { version = "0.7", optional = true }
itoa = "1"

[profile.release]
strip = true
lto = "thin"

[package.metadata.docs.rs]
features = ["rand", "fuzzing", "dev-phmm", "dev-3pass"]
rustdoc-args = ["--html-in-header", "./assets/docs-header.html"]
