[package]
edition = "2024"
name = "zoe"
version = "0.0.26-dev"
rust-version = "1.95"
description = "A nightly library for viral genomics"
license = "Apache-2.0"

# Long-term maintainers of the Zoe library
authors = ["Samuel S. Shepard <sshepard@cdc.gov>"]
categories = [
    "science::bioinformatics::sequence-analysis",
    "science::bioinformatics::genomics",
    "algorithms",
]
keywords = ["alignment", "simd", "kmer", "search", "distance"]
repository = "https://github.com/CDCgov/zoe"
homepage = "https://github.com/CDCgov/zoe"
readme = "README.md"
include = [
    "src/**/*",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "assets/docs-header.html",
    ".cargo/config.toml",
]

[lib]
name = "zoe"

[features]
default = ["rand"]

# An optional feature for generating random nucleotide and amino acid sequences
rand = ["dep:rand_xoshiro", "dep:rand"]

# An optional feature that provides SIMD multiversioning of selected Zoe
# functions
multiversion = ["dep:multiversion"]

# An optional feature adding additional functionality for fuzzing, including
# Arbitrary implementations
fuzzing = ["dep:arbitrary"]

# An optional feature exposing additional alignment-related functions and
# internals, such as for testing
alignment-diagnostics = ["dep:visibility"]

# Note: development features may be removed at any time.

# An optional feature enabling pHMM functionality which is currently in
# development
dev-phmm = []

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
multiversion = { version = "0.8", optional = true }
rand_xoshiro = { version = "0.7", optional = true }
rand = { version = "0.9", default-features = false, optional = true }
itoa = "1"
visibility = { version = "0.1.1", optional = true }

[profile.release]
strip = true
lto = "thin"

[package.metadata.docs.rs]
features = ["rand", "fuzzing", "dev-phmm", "alignment-diagnostics"]
rustdoc-args = ["--html-in-header", "./assets/docs-header.html"]

[[example]]
name = "demo_random"
required-features = ["rand"]
